# HonestCyberEval

./: .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  compose.yaml  compose_local_overrides.yaml  cp_config.yaml  input2.blob  kompose_competition_overrides.yaml  kompose_development_overrides.yaml  mock-cp.Dockerfile  nginx-cp.Dockerfile  patch.sh  pyproject.toml  requirements.txt  results.md
.github/: .templatesyncignore
.github/actions/: trigger-downstream-sync.mjs
.github/linters/: actionlint.yaml
.github/workflows/: crs.yml  evaluator.yml  load-cp-images-package.yml  mock_crs_package.yml  network-test.yml  package.yml  template-sync.yml  trigger-sync-on-release.yml
config/: cp_config.yaml  example.env  local_litellm_config.yaml
cp_config/: cp_config.yaml  kustomization.yaml
crs/: README.md
crs/src/: Dockerfile  env.example  pyproject.toml  requirements.test.txt  requirements.txt  run.sh
crs/src/py/: config.py  logger.py  logging.yaml  params.py  run.py  submit.py
crs/src/py/api/: cp.py  cp_fs.py  data_types.py  fs.py  llm.py  submit.py
crs/src/py/api/llm/: __init__.py  error_handler.py
crs/src/py/pipeline/: langgraph_patch.py  langgraph_vuln.py  patch_gen.py  preprocess_commits.py  setup_project.py  test_vuln_discovery.py  vuln_discovery.py
crs/src/typings/clang/: cindex.pyi
crs/src/typings/javalang/: __init__.pyi
results/: exploit.csv  identify.csv  paired.csv
sandbox/: Dockerfile  compose.yaml  compose_local_overrides.yaml  example.env  script.js
sandbox/capi/: config.yaml
sandbox/cp_image_pull/: Dockerfile  run.sh
sandbox/crs/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
sandbox/crs/src/: config.py  exploit.py  logger.py  params.py  run.py
sandbox/crs/src/api/: cp.py  data_types.py  fs.py
sandbox/crs/src/api/llm/: __init__.py  error_handler.py
sandbox/crs/src/dataset/: cp.py
sandbox/crs/src/pipeline/: langgraph_vuln.py  setup_project.py  vuln_discovery.py  vuln_graph.py
sandbox/crs/src/solvers/: reflexion_vuln_detect.py  with_structured_output.py
sandbox/kustomize/base/: kustomization.yaml  load-cp-images-config.json  service-account.yaml  service-cluster-role-binding.yaml  service-cluster-role.yaml  service-role-binding.yaml  service-role.yaml
sandbox/kustomize/competition/: crs-env.yaml
sandbox/kustomize/development/: kustomization.yaml
sandbox/litellm/: demo-test.sh  local_litellm_config.yaml  script.js
sandbox/load_cp_images/: Dockerfile  run.sh
sandbox/nginx/: default.conf.template
src/: config.py  exploit.py  logger.py  logging.yaml
src/api/: cp.py  fs.py  sandbox.py
src/dataset/: cp.py  exploit.py  extract_dataset.py  identify.py  paired.py
src/dataset/output/: mock_cp.json  nginx_cp.json
src/metrics/: pair_correct.py  pair_correct_prediction.py  pair_prediction.py
src/solvers/: identify.py  paired.py  reflexion_vuln_detect.py  reflexion_vuln_exploit.py  setup.py
src/tasks/: exploit.py  identify.py  paired.py
