[project]
name = "crs"
version = "0.1.0"
dependencies = [
    "aioshutil==1.4",
    "aiorwlock==1.4.0",
    "PyYAML==6.0.2",
    "GitPython==3.1.43",
    "inspect-ai==0.3.61",
]

[project.optional-dependencies]
openai = ["openai==1.59.6"]
azure-ai = ["azure-ai-inference==1.0.0b8"]
groq = ["groq==0.16.0"]
dev = [
    "pip-tools",
    "pyright",
    "black==24.10.0",
    "isort==5.13.2",
    "pre-commit",
    "types-PyYAML",
    "types-requests",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.pip-tools]
generate-hashes = false

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
include = ["src"]
reportMissingTypeStubs = true
deprecateTypingAliases = true
executionEnvironments = [{ root = "src" }]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
skip_gitignore = true
known_first_party = ["api", "pipeline", "config", "logger", "params"]

[tool.black]
target-version = ["py312"]
line_length = 120
preview = true
enable-unstable-feature= ["hug_parens_with_braces_and_square_brackets"]
