[project]
name = "crs"
version = "0.2.0"
dependencies = [
    "aioshutil",
    "aiorwlock",
    "PyYAML",
    "pydantic",
    "GitPython",
    "inspect-ai",
]

[project.optional-dependencies]
openai = ["openai"]
azure-ai = ["azure-ai-inference"]
groq = ["groq"]
anthropic = ["anthropic"]
dev = [
    "pip-tools",
    "pyright",
    "black",
    "isort",
    "pre-commit",
    "types-PyYAML",
    "types-requests",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.pip-tools]
generate-hashes = false

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
include = ["src"]
reportMissingTypeStubs = true
deprecateTypingAliases = true
executionEnvironments = [{ root = "src" }]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
skip_gitignore = true
known_first_party = ["api", "pipeline", "config", "logger", "params"]

[tool.black]
target-version = ["py312"]
line_length = 120
preview = true
enable-unstable-feature= ["hug_parens_with_braces_and_square_brackets"]
