[project]
name = "crs"
version = "0.1.0"
dependencies = [
    "aioshutil==1.4",
    "aiorwlock==1.4.0",
    "PyYAML==6.0.2",
    "GitPython==3.1.43",
    "inspect-ai@git+https://github.com/UKGovernmentBEIS/inspect_ai.git@894d343a1fb2c84624808f8650452060c331aa7b",
    "langchain==0.3.9",
    "langchain-community==0.3.8",
    "langchain-openai==0.2.10",
    "langgraph==0.2.53",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pyright",
    "black==24.10.0",
    "isort==5.13.2",
    "pre-commit",
    "types-PyYAML",
    "types-requests",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.pip-tools]
generate-hashes = false
