[project]
name = "crs"
version = "0.1.0"
dependencies = [
    "aioshutil==1.4",
    "aiorwlock==1.4.0",
    "PyYAML==6.0.2",
    "GitPython==3.1.43",
    "inspect-ai==0.3.60",
]

[project.optional-dependencies]
openai = ["openai==1.59.6"]
azure-ai = ["azure-ai-inference==1.0.0b8"]

[build-system]
requires = ["setuptools", "wheel"]

[tool.pip-tools]
generate-hashes = false
